<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vp_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#EAEEF4" />

    <com.luoyang.androidfunDemo.ui.BottomBarLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_bottom_bar_height"
        android:background="@color/base_common_white"
        android:orientation="horizontal">

        <com.luoyang.androidfunDemo.ui.BottomBarItem
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:iconHeight="@dimen/main_icon_width_height"
            app:iconWidth="@dimen/main_icon_width_height"
            app:itemText="@string/home_1"
            app:itemTextSize="@dimen/main_icon_title_size"
            app:lottieJson="home.json"
            app:textColorNormal="@color/color_primary_text_second"
            app:textColorSelected="@color/color_primary_button" />

        <com.luoyang.androidfunDemo.ui.BottomBarItem
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:iconHeight="@dimen/main_icon_width_height"
            app:iconWidth="@dimen/main_icon_width_height"
            app:itemText="@string/home_game"
            app:itemTextSize="@dimen/main_icon_title_size"
            app:lottieJson="game.json"
            app:textColorNormal="@color/color_primary_text_second"
            app:textColorSelected="@color/color_primary_button" />

        <com.luoyang.androidfunDemo.ui.BottomBarItem
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:iconHeight="@dimen/main_icon_width_height"
            app:iconWidth="@dimen/main_icon_width_height"
            app:itemText="@string/home_app"
            app:itemTextSize="@dimen/main_icon_title_size"
            app:lottieJson="soft.json"
            app:textColorNormal="@color/color_primary_text_second"
            app:textColorSelected="@color/color_primary_button" />


        <com.luoyang.androidfunDemo.ui.BottomBarItem
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:iconHeight="@dimen/main_icon_width_height"
            app:iconWidth="@dimen/main_icon_width_height"
            app:itemText="@string/home_setting"
            app:itemTextSize="@dimen/main_icon_title_size"
            app:lottieJson="mine.json"
            app:textColorNormal="@color/color_primary_text_second"
            app:textColorSelected="@color/color_primary_button" />
    </com.luoyang.androidfunDemo.ui.BottomBarLayout>

</LinearLayout>
