<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_content"
        android:layout_width="match_parent"
        android:layout_height="@dimen/audio_file_item_height"
        android:layout_marginStart="@dimen/group_layout_start"
        android:layout_marginEnd="@dimen/group_layout_end"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/audio_file_icon"
            android:layout_height="@dimen/audio_file_icon"
            android:layout_gravity="center_vertical"
            android:background="@color/white"
            android:src="@mipmap/icon_audio_file" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="@dimen/group_space"
            android:paddingBottom="@dimen/group_space">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxWidth="@dimen/audio_name_max_width"
                    android:singleLine="true"
                    android:text="@string/file_name"
                    android:textColor="@color/color_file_name"
                    android:textSize="@dimen/dimen_primary_text_three" />

                <TextView
                    android:id="@+id/tv_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/group_space"
                    android:ellipsize="end"
                    android:gravity="left|bottom"
                    android:singleLine="true"
                    android:text="@string/file_size"
                    android:textColor="@color/color_text_tip"
                    android:textSize="@dimen/dimen_primary_text_five" />
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_loc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/file_absolute_path"
                android:textColor="@color/color_text_tip"
                android:textSize="@dimen/dimen_primary_text_six" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/cb_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/group_space"
            android:clickable="false" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height"
        android:layout_gravity="bottom"
        android:background="@color/color_text_tip" />
</FrameLayout>